--- a/Css/style.css
+++ b/Css/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-color: rgb(242, 239, 239);
+    background-color: rgb(0, 0, 0);
 }
 /* Estilo del "PADRE" 
 .contaiener{ 
@@ -169,6 +169,33 @@ body{
 
 /*Contact*/
 
+.body-contact{
+    background-color:  rgb(26, 29, 55);
+}
+form{
+    position: absolute;
+    left: 700px;
+    top: 300px ;
+    
+}
+
+form label{
+    
+    color: rgb(255, 255, 255); /* cambiamos el color a los titulos del formulario*/
+    
+}
+.form-control{
+    width: 55%;
+    height: 40px;
+
+}
+.input-group{
+    width: 55%;
+    
+}
+
+
+
 /*------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
 /*Teachers*/
@@ -185,7 +212,8 @@ body{
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color:rgb(26, 29, 55);;
+    /*background-color:rgb(26, 29, 55); */
+    background-color:  rgb(0, 0, 0);
     color: white;
     height: 55px;
     
