--- a/Css/style.css
+++ b/Css/style.css
@@ -197,7 +197,8 @@ form label{
 .section-formulario{
     color: white;
     text-align: center;
-}
+    padding: 100px; 
+} 
 .section-formulario div h3{
     position: relative;
     left: 70px;
@@ -205,6 +206,7 @@ form label{
     
 }
 .section-formulario div p{
+    padding-left: 150px;
     font-size: 16px;
 }
 
