--- a/Css/style.css
+++ b/Css/style.css
@@ -9,13 +9,8 @@
 body{
     background-color: rgb(0, 0, 0);
 }
-/* Estilo del "PADRE" 
-.contaiener{ 
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-}
-*/
+
+
 /*------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
 /* INDEX */
@@ -42,8 +37,6 @@ body{
 .nav-item a p:hover{
     color: white;
 }
-
-
 .section{
     display: flex;
     flex-direction:row;
@@ -84,8 +77,6 @@ body{
     width: 140px;
     height: 43px;
     border-color:rgb(157, 93, 216);
-    
-    
 }
 
 .botonInscripcion button{
@@ -157,6 +148,7 @@ body{
 
 /* About Us*/
 
+
 /*------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
 /* Blog Academy*/
@@ -167,6 +159,22 @@ body{
 
 .body-contact{
     background-color:  rgb(26, 29, 55);
+}
+
+.section-contact{
+    color: white;
+    text-align: center;
+    padding: 100px; 
+} 
+.section-contact div h3{
+    position: relative;
+    left: 70px;
+    font-size: 70px;
+    
+}
+.section-contact div p{
+    padding-left: 150px;
+    font-size: 16px;
 }
 
 form{
@@ -182,8 +190,6 @@ form label{
 .form-control{
     width: 55%;
     height: 40px;
-    
-
 }
 .input-group{
     width: 55%;
@@ -192,23 +198,9 @@ form label{
 .col-md-3{ /* el formulario provincia lo muevo para que quede al lado del inpum ciudad*/
  position: relative;
  left: -240px;
-}   
-
-.section-formulario{
-    color: white;
-    text-align: center;
-    padding: 100px; 
 } 
-.section-formulario div h3{
-    position: relative;
-    left: 70px;
-    font-size: 70px;
-    
-}
-.section-formulario div p{
-    padding-left: 150px;
-    font-size: 16px;
-}
+
+
 
 /*------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
@@ -226,8 +218,7 @@ form label{
     left: 0;
     bottom: 0;
     width: 100%;
-    /*background-color:rgb(26, 29, 55); */
-    background-color:  rgb(0, 0, 0);
+    background-color:  rgb(0, 0, 0); 
     color: white;
     height: 55px;
     
@@ -255,10 +246,18 @@ form label{
 
 /*MEDIA QUERIES - MOBILE*/
 
-@media (max-width:375px){  /* max-width es para que ocupe el maximo de la pantalla entre 0px y 375px */
+@media (max-width:367px){  /* max-width es para que ocupe el maximo de la pantalla entre 0px y 375px */
     
+    *{
+        margin: 0;
+    }
+    /* INDEX */
     
+    .navbar-brand{
+        font-size: 16px;
+    }
     /*Boton inscripcion*/
+
     .botonInscripcion button{
         width: 110px;
         height: 33px; 
@@ -292,6 +291,65 @@ form label{
         top: -100px; /* Mueve el video hacia abajo*/  /* si lo queremos mover hacia arriba usamos el signo menor (-)*/
        
     }
+    
+  
+    /*------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+    /*Contact*/
+    
+    .section-contact{
+        display: flex;
+        flex-direction: row;
+    }
+    .section-contact div h3{
+        
+        flex-direction: row;
+        left: 0px ;
+        top: -60px;
+        font-size: 30px;
+        
+    }
+    .section-contact div p{
+        position: absolute;
+        left: 0;
+        top: 230px;
+        margin: 0px 18px;
+        text-align: justify;
+        
+    }
+    .section-contact div p{
+        padding-left: 0px;
+        font-size: 17px;
+    }
+    
+    form{
+        position: relative;
+        left: 60px ;
+        top: 150px;
+        margin: 250px ;
+        font-size: 14px;
+
+       
+    }
+    .form-control{
+        width: 70%;
+        height: 40px;
+    }
+    .input-group{
+        width: 70%;
+        
+    }
+    .col-md-3{ /* el formulario provincia lo muevo para que quede al lado del inpum ciudad*/
+     
+        width: 70%;
+        left: 0px;
+     
+    }  
+
+    /*------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+    /* Footer */
+    
     .footer{
         
         flex-direction: column;
@@ -309,8 +367,6 @@ form label{
         justify-content: center;
         align-items: center;
     }
-  
-    
 }
 
 /*------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
