--- a/Css/style.css
+++ b/Css/style.css
@@ -21,6 +21,18 @@ body{
     background-color: rgb(0, 0, 0);
 }
 
+/* Logo de mi pagina*/
+.navbar img{
+    object-fit: contain;
+    display: block;
+    width: auto;
+    height: 2.9375rem;
+    position: relative;
+    left: 280px;
+}
+.navbar .container-fluid i{
+    padding: 40px;
+}
 .collapse{
     justify-content: end; /*Mandamos los hijos al final del header*/
     padding: 100px;
@@ -37,19 +49,29 @@ body{
 .nav-item a p:hover{
     color: white;
 }
-.section{
+.section-index{
     display: flex;
     flex-direction:row;
     padding: 5px 0px;
 }
-.section div  h5{
-    justify-content: start;
-    color: rgb(157, 93, 216);
-    padding: 50px 0px ;
+.section-index div  h5{
+    position: relative;
+    top: 100px;
+    color: #b06bff;   
+    padding: 20px 20px ;
     margin: 20px ;
     font-size: 24px;
+} 
+h5::before{  /* Linea al comienza del h5*/
+    content: '';
+    background-color:#b06bff;
+    position: absolute;
+    top: 50%;
+    left: -16px;
+    width: 30px;
+    height: 1.5px;
 }
-.section video{
+.section-index video{
     
     position: relative; /* Permite el desplazamiento relativo del video*/
     left: 200px;  /* Mueve el video 300px hacia la derecha*/
@@ -57,34 +79,35 @@ body{
    
 }
 
-.section .titulo-grande{
-    color: white;
-    
-}
-.section  div p{
+.section-index  div p{
+    position: relative;
+    top: 80px;
     color:white;
     justify-content: space-between;
     font-size: 60px;
     
 }
-.section div div p{
+.section-index div div p{
+    position: relative;
+    top: 85px;
     font-size: 16px;
 }
 .botonInscripcion button{
-    background-color: rgb(157, 93, 216);
+    background-color: #b06bff;
     color: rgb(255, 255, 255);
     border-radius: 2px;
     width: 140px;
     height: 43px;
-    border-color:rgb(157, 93, 216);
+    border-color:#b06bff;
 }
 
 .botonInscripcion button{
     position: relative;
+    top: 110px;
     padding: 10px 15px;
     border: none;
     outline: none;
-    background: rgb(157, 93, 216);
+    background: #b06bff;
     cursor: pointer;
     transition: .5s;
     overflow: hidden;
@@ -148,6 +171,76 @@ body{
 
 /* About Us*/
 
+.body-aboutUs{
+    background-color:  rgb(26, 29, 55);
+}
+.section-aboutUs{
+    color: white;
+}
+.section-aboutUs .section-titulos{
+    text-align: center;
+}
+.section-aboutUs .section-titulos h6{
+    position: relative;
+    top: 70px;
+    color: #b06bff;
+    
+}
+.section-aboutUs .section-titulos h4{
+    position: relative;
+    top: 80px;
+    font-size: 45px;
+    color: #b06bff;
+}
+.section-aboutUs .section-titulos p{
+    position: relative;
+    top: 95px;
+    font-size: 19px;
+}
+
+/* Contenido de img y parrafo*/
+.img-contenido{   
+    position: absolute  ;
+    left: 370px;
+    top: 500px;
+
+
+}
+.img-contenido h6{
+    font-size: 17px;
+}
+.img-contenido p{
+    font-size: 14.5px;
+    
+}
+.img-contenido i{
+    position: relative;
+    top: 60px;
+    left:-100px;
+}
+/* Posicion de los iconos con los parrafos*/
+.iconPerson i{
+    top: 75px;
+    
+}
+.iconSinLimites i{
+    top: 70px;
+    
+}
+.img-contenido .sinlimites{
+    padding: 0px 0px 100px;
+}
+
+/* Imagen de  fondo*/
+.section-aboutUs .imgFondo{
+    display: flex;
+    justify-content: flex-end;
+}
+.section-aboutUs .imgFondo img{
+    position: relative;
+    left: -210px;
+    top: 220px;
+}
 
 /*------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
@@ -200,7 +293,13 @@ form label{
  left: -240px;
 } 
 
-
+/*Imagen contacto */
+.imgContact img{
+    position: relative ;
+    left: 200px;
+    width: 450px;
+    
+}
 
 /*------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
@@ -223,73 +322,93 @@ form label{
     height: 55px;
     
 }
-.footer-redsocial img{
-    width: 40px;
+
+.footer i{
+    color:  #ffffff;
+    padding: 20px;
+   
 }
 
-.footer .footer-tex {
-  
+.footer-tex {
     padding: 20px;
 }
 .footer-redsocial a{
     text-decoration: none;
 }
-.footer-redsocial a img{
-    
-    height: 50px;
-    width: 50px;
-    padding: 10px;
-    
-}
+
 
 /*------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
 /*MEDIA QUERIES - MOBILE*/
 
-@media (max-width:367px){  /* max-width es para que ocupe el maximo de la pantalla entre 0px y 375px */
+@media (max-width:575px){  /* max-width es para que ocupe el maximo de la pantalla entre 0px y 375px */
     
     *{
         margin: 0;
     }
     /* INDEX */
-    
+  
     .navbar-brand{
         font-size: 16px;
     }
+
+    .navbar img{
+        object-fit: contain;
+        display: block;
+        width: auto;
+        height: 2.9375rem;
+        position: relative;
+        left: 30px;
+    }
+
     /*Boton inscripcion*/
 
     .botonInscripcion button{
+        display: flex;
+        align-items: center;
+        position: relative;
+        top: -90px;
         width: 110px;
         height: 33px; 
 
     }
   
-    .section{
+    .section-index{
         display: flex;
         flex-direction: column;
+        position: relative;
         padding: 10px 10px;
     
     }
-    .section div  h5{
+    .section-index div  h5{
         text-align: center;
-        
         padding: 50px 0px ;
         margin: 20px ;
         font-size: 17px;
+        top: -50px;
     }
-    .section  div p{
-        text-align: center;
-        color:white;
-        font-size: 30px;
+    h5::before{  /* Linea al comienza del h5*/
+        top: 42%;
+        left: 1px;
+        width: 20px;
         
     }
-   
-    .section video{
+    .section-index  div p{
+        text-align: center;
+        color:rgb(255, 255, 255);
+        font-size: 30px;
+        top: -90px;
+        
+    }
+    .section-index div div p{
+        top: -100px;
+        font-size: 16px;
+    }
+    .section-index video{
         width: 320px;
-        position:static; /* Permite el desplazamiento relativo del video*/
-        right: 300px;  /* Mueve el video 300px hacia la derecha*/
-        top: -100px; /* Mueve el video hacia abajo*/  /* si lo queremos mover hacia arriba usamos el signo menor (-)*/
-       
+        position:relative; /* Permite el desplazamiento relativo del video*/
+        top: -150px; /* Mueve el video hacia abajo*/  /* si lo queremos mover hacia arriba usamos el signo menor (-)*/
+        left: -2px;
     }
     
   
@@ -358,7 +477,7 @@ form label{
         
         
     }
-    .footer .footer-tex{
+    .footer-tex{
         font-size: 12px;
         
     }
@@ -369,12 +488,8 @@ form label{
     }
 }
 
-/*------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
-
-/*MEDIA QUERIES - TABLET*/
-
-@media (min-width:376px) and (max-width:992px){ /* min-width es la menor cantidad de px hasta el mayor*/ /* El operador and nos permite combinar (sumar)resoluciones */
-    header{
-        background-color: rgb(4, 53, 37);
+@media (min-width: 768px) and (max-width: 991.98px) { 
+    body{
+        background-color: aliceblue;
     }
-}
+ }
