--- a/scss/pages/blogAcademy.scss
+++ b/scss/pages/blogAcademy.scss
@@ -2,7 +2,9 @@ body,html{
     height: 100%;
     margin: 0;
     
+}
 
+//Parte negra
 .section{
 
     width: 100%;
@@ -10,7 +12,7 @@ body,html{
     
     .titulo-blog h1{
         position: relative;
-        top: 100px;
+        top: 50px;
         font-size: 60px;
         text-align: center;
         color: white;
@@ -18,8 +20,9 @@ body,html{
     .boton-busqueda{
 
         position:relative;
-        top: 220px;
+        top: 120px;
         text-align: center;
+        
 
         input{
             width: 12%;
@@ -32,16 +35,80 @@ body,html{
         
         
     }
+   
+    
+    
+
+}
+
+.tarjetas-section{
+    position: relative;
+    top: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    .conteiner-blog {
+        width: 100%;
+        display: flex;
+        justify-content: space-around; /* Alinea las tarjetas con espacio alrededor */
+        max-width: 1100px;
+    }
+
+    .card {
+        width: 30%; /* Ajusta el ancho según tus necesidades */
+        margin: 20px;
+        border-radius: 6px;
+        overflow: hidden;
+        background: #fff;
+        box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+        cursor: default;
+        transition: all 400ms ease;
+
+        &:hover {
+            box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+            transform: translateY(-3%);
+        }
+        img {
+            width: 100%;
+            height: 180px;
+        }
+        .contenido {
+            padding: 15px;
+            text-align: center;
+            p {
+                line-height: 1.5;
+                color: #6a6a6a;
+            }
+            h3 {
+                font-weight: 400;
+                margin-bottom: 15px;
+            }
+            a {
+                text-decoration: none;
+                display: inline-block;
+                padding: 10px;
+                margin-top: 10px;
+                color: #2fb4cc;
+                border: 1px solid #2fb4cc;
+                border-radius: 4px;
+                transition: all 400ms ease;
+            }
+        }
+        
+         
+    }
+
 }
    
-}
+//Secciones de la pagina para el contenido
 .black{
     background-color: black;
-    height: 350px; /* Altura de la primera sección */
+    height: 290px; /* Altura de la primera sección */
     
 }
 .white{
     background-color: white;
-    height: calc(100% - 350px); /* La segunda sección toma el espacio restante */
+    height: calc(100% - 290px); /* La segunda sección toma el espacio restante */
 }
 
