--- a/css/styles.css
+++ b/css/styles.css
@@ -251,17 +251,22 @@ body, html {
   text-align: center;
 }
 .section .boton-busqueda input {
-  width: 12%;
+  width: 14%;
   height: 40px;
   border-radius: 5px;
   border: none;
   cursor: pointer;
   padding: 10px;
 }
+.section .boton-busqueda i {
+  position: relative;
+  left: -37px;
+  cursor: pointer;
+}
 
 .tarjetas-section {
   position: relative;
-  top: 5px;
+  top: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -303,6 +308,8 @@ body, html {
   margin-bottom: 15px;
 }
 .tarjetas-section .card .contenido a {
+  position: relative;
+  top: 10px;
   text-decoration: none;
   display: inline-block;
   padding: 10px;
@@ -312,9 +319,21 @@ body, html {
   border-radius: 4px;
   transition: all 400ms ease;
 }
+.tarjetas-section .card .contenido .titulo-tarjeta2 {
+  position: relative;
+  top: -20px;
+}
+.tarjetas-section .card .contenido .parrafo-tarjet2 {
+  position: relative;
+  top: -20px;
+}
+.tarjetas-section .card .contenido .boton-tarjeta2 {
+  position: relative;
+  top: -20px;
+}
 
 .black {
-  background-color: black;
+  background-color: rgb(26, 29, 55);
   height: 290px; /* Altura de la primera sección */
 }
 
