--- a/scss/pages/blogAcademy.scss
+++ b/scss/pages/blogAcademy.scss
@@ -23,14 +23,18 @@ body,html{
         top: 120px;
         text-align: center;
         
-
         input{
-            width: 12%;
+            width: 14%;
             height: 40px;
             border-radius: 5px;
             border: none;
             cursor: pointer;
             padding: 10px;
+        }
+        i{
+            position: relative;
+            left: -37px;
+            cursor: pointer;
         }
         
         
@@ -43,7 +47,7 @@ body,html{
 
 .tarjetas-section{
     position: relative;
-    top: 5px;
+    top: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,7 +88,10 @@ body,html{
                 font-weight: 400;
                 margin-bottom: 15px;
             }
+            
             a {
+                position: relative;
+                top: 10px;
                 text-decoration: none;
                 display: inline-block;
                 padding: 10px;
@@ -93,6 +100,18 @@ body,html{
                 border: 1px solid #2fb4cc;
                 border-radius: 4px;
                 transition: all 400ms ease;
+            }
+            .titulo-tarjeta2{
+                position: relative;
+                top: -20px;
+            }
+            .parrafo-tarjet2{
+                position: relative;
+                top: -20px;
+            }
+            .boton-tarjeta2{
+                position: relative;
+                top: -20px;
             }
         }
         
@@ -103,7 +122,7 @@ body,html{
    
 //Secciones de la pagina para el contenido
 .black{
-    background-color: black;
+    background-color: rgb(26, 29, 55);
     height: 290px; /* Altura de la primera sección */
     
 }
