--- a/scss/pages/aboutUs.scss
+++ b/scss/pages/aboutUs.scss
@@ -8,16 +8,18 @@
     .section-titulos{
         text-align: center;
 
-        h6{
-            position: relative;
-            top: 70px;
-            color: #b06bff;
-        }
-        h4{
+        
+        h1{
             position: relative;
             top: 80px;
             font-size: 45px;
             color: #b06bff;
+        }
+        h2{
+            position: relative;
+            top: 70px;
+            color: #b06bff;
+            font-size: 20px;
         }
         p{
             position: relative;
