--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,11 @@
   height: 75px;
   font-size: 20px;
   background-color: rgb(0, 0, 0);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 3;
 }
 .navbar img {
   object-fit: contain;
@@ -50,6 +55,9 @@
 .footer i {
   color: #ffffff;
   padding: 20px;
+}
+.footer i:hover {
+  transform: scale(0.9);
 }
 .footer .footer-tex {
   padding: 20px;
@@ -198,7 +206,7 @@ body {
 .section-aboutUs .img-contenido {
   position: absolute;
   left: 370px;
-  top: 500px;
+  top: 400px;
 }
 .section-aboutUs .img-contenido h6 {
   font-size: 17px;
@@ -227,7 +235,7 @@ body {
 .section-aboutUs .imgFondo img {
   position: relative;
   left: -210px;
-  top: 220px;
+  top: 140px;
 }
 
 body, html {
@@ -237,11 +245,10 @@ body, html {
 
 .section {
   width: 100%;
-  position: relative;
 }
 .section .titulo-blog h1 {
   position: relative;
-  top: 50px;
+  top: 90px;
   font-size: 60px;
   text-align: center;
   color: white;
@@ -388,6 +395,208 @@ form .col-md-3 {
   top: -50px;
   left: 1200px;
   width: 600px;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 375px) {
+  .navbar img {
+    left: 30px;
+  }
+  .section-index {
+    flex-direction: column;
+  }
+  .section-index div h1 {
+    text-align: center;
+    font-size: 20px;
+    top: 60px;
+  }
+  .section-index div h1::before {
+    content: "";
+    background-color: #b06bff;
+    position: absolute;
+    top: 29%;
+    left: 42px;
+    width: 20px;
+    height: 1.5px;
+  }
+  .section-index video {
+    position: relative; /* Permite el desplazamiento relativo del video*/
+    left: 0px; /* Mueve el video 300px hacia la derecha*/
+    top: 100px; /* Mueve el video hacia abajo*/ /* si lo queremos mover hacia arriba usamos el signo menor (-)*/
+    width: auto;
+  }
+  .section-index div p {
+    text-align: center;
+    font-size: 37px;
+  }
+  .section-index div div p {
+    position: relative;
+    top: 85px;
+    font-size: 16px;
+  }
+  .section-aboutUs {
+    display: flex;
+    flex-direction: column;
+  }
+  .section-aboutUs .section-titulos {
+    text-align: center;
+  }
+  .section-aboutUs .section-titulos h1 {
+    top: 100px;
+    font-size: 28px;
+  }
+  .section-aboutUs .section-titulos h2 {
+    top: 90px;
+    font-size: 15px;
+  }
+  .section-aboutUs .section-titulos p {
+    padding: 15px;
+    text-align: justify;
+    top: 100px;
+    font-size: 16px;
+  }
+  .section-aboutUs .img-contenido {
+    position: relative;
+    left: 0px;
+    top: 400px;
+  }
+  .section-aboutUs .img-contenido h6 {
+    font-size: 15px;
+    padding-top: 60px;
+    text-align: center;
+  }
+  .section-aboutUs .img-contenido p {
+    font-size: 12.5px;
+    padding: 10px;
+    text-align: center;
+  }
+  .section-aboutUs .img-contenido i {
+    top: 20px;
+    left: 150px;
+  }
+  .section-aboutUs .img-contenido .iconPerson i {
+    top: 10px;
+  }
+  .section-aboutUs .img-contenido .iconSinLimites i {
+    top: 20px;
+  }
+  .section-aboutUs .imgFondo {
+    justify-content: center;
+  }
+  .section-aboutUs .imgFondo img {
+    left: 2px;
+    width: 250px;
+    top: -950px;
+  }
+  body, html {
+    height: 100%;
+    margin: 0;
+  }
+  .section {
+    width: 100%;
+  }
+  .section .titulo-blog h1 {
+    top: 60px;
+    font-size: 35px;
+  }
+  .section .boton-busqueda {
+    top: 120px;
+    left: 20px;
+    text-align: center;
+  }
+  .section .boton-busqueda input {
+    width: 60%;
+  }
+  .tarjetas-section {
+    position: relative;
+    top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .tarjetas-section .conteiner-blog {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    display: flex;
+    justify-content: space-around; /* Alinea las tarjetas con espacio alrededor */
+    max-width: 1100px;
+  }
+  .tarjetas-section .card {
+    width: 80%; /* Ajusta el ancho según tus necesidades */
+    margin: 20px;
+    border-radius: 6px;
+    overflow: hidden;
+    background: #fff;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+    cursor: default;
+    transition: all 400ms ease;
+  }
+  .tarjetas-section .card:hover {
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+    transform: translateY(-3%);
+  }
+  .tarjetas-section .card img {
+    width: 100%;
+    height: 180px;
+  }
+  .tarjetas-section .card .contenido {
+    padding: 15px;
+    text-align: center;
+  }
+  .tarjetas-section .card .contenido p {
+    line-height: 1.5;
+    color: #6a6a6a;
+  }
+  .tarjetas-section .card .contenido h3 {
+    font-weight: 400;
+    margin-bottom: 15px;
+  }
+  .tarjetas-section .card .contenido a {
+    position: relative;
+    top: 10px;
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px;
+    margin-top: 10px;
+    color: #2fb4cc;
+    border: 1px solid #2fb4cc;
+    border-radius: 4px;
+    transition: all 400ms ease;
+  }
+  .tarjetas-section .card .contenido .titulo-tarjeta2 {
+    position: relative;
+    top: -20px;
+  }
+  .tarjetas-section .card .contenido .parrafo-tarjet2 {
+    position: relative;
+    top: -20px;
+  }
+  .tarjetas-section .card .contenido .boton-tarjeta2 {
+    position: relative;
+    top: -20px;
+  }
+  .black {
+    background-color: rgb(26, 29, 55);
+    height: 290px; /* Altura de la primera sección */
+  }
+  .white {
+    background-color: white;
+    height: calc(100% - 290px); /* La segunda sección toma el espacio restante */
+  }
+  .footer {
+    flex-direction: column;
+    height: 80px;
+  }
+  .footer i {
+    padding: 10px;
+    position: relative;
+    top: -25px;
+    left: 70px;
+  }
+  .footer .footer-tex {
+    padding: 20px;
+    font-size: 11px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
