--- a/scss/layaut/footer.scss
+++ b/scss/layaut/footer.scss
@@ -13,6 +13,9 @@
     i{
         color:  #ffffff;
         padding: 20px;
+        &:hover{
+            transform: scale(0.9);
+        }
     }
     
     .footer-tex{
