--- a/scss/layaut/header.scss
+++ b/scss/layaut/header.scss
@@ -1,7 +1,13 @@
+
 .navbar{
     height: 75px;
     font-size: 20px;
     background-color: rgb(0, 0, 0);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 3; // Es para que no se me superponga la barra de navegacion para el responsive
 
     //Logo de mi pagina
     img{
