--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -14,3 +14,6 @@
 @import './pages/blogAcademy.scss';
 @import './pages/contact.scss';
 @import './pages/teachers.scss';
+
+//responsive
+@import './responsive/responsive.scss';
