--- a/css/styles.css
+++ b/css/styles.css
@@ -504,17 +504,6 @@ form .col-md-3 {
   }
   .tarjetas-section .card {
     width: 80%; /* Ajusta el ancho según tus necesidades */
-    margin: 20px;
-    border-radius: 6px;
-    overflow: hidden;
-    background: #fff;
-    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
-    cursor: default;
-    transition: all 400ms ease;
-  }
-  .tarjetas-section .card:hover {
-    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
-    transform: translateY(-3%);
   }
   .tarjetas-section .card img {
     width: 100%;
@@ -531,38 +520,6 @@ form .col-md-3 {
   .tarjetas-section .card .contenido h3 {
     font-weight: 400;
     margin-bottom: 15px;
-  }
-  .tarjetas-section .card .contenido a {
-    position: relative;
-    top: 10px;
-    text-decoration: none;
-    display: inline-block;
-    padding: 10px;
-    margin-top: 10px;
-    color: #2fb4cc;
-    border: 1px solid #2fb4cc;
-    border-radius: 4px;
-    transition: all 400ms ease;
-  }
-  .tarjetas-section .card .contenido .titulo-tarjeta2 {
-    position: relative;
-    top: -20px;
-  }
-  .tarjetas-section .card .contenido .parrafo-tarjet2 {
-    position: relative;
-    top: -20px;
-  }
-  .tarjetas-section .card .contenido .boton-tarjeta2 {
-    position: relative;
-    top: -20px;
-  }
-  .black {
-    background-color: rgb(26, 29, 55);
-    height: 290px; /* Altura de la primera sección */
-  }
-  .white {
-    background-color: white;
-    height: calc(100% - 290px); /* La segunda sección toma el espacio restante */
   }
   .body-contact {
     height: 110%;
@@ -587,7 +544,7 @@ form .col-md-3 {
   form {
     position: absolute;
     left: 80px;
-    top: 770px;
+    top: 740px;
   }
   form label {
     color: rgb(255, 255, 255);
@@ -620,6 +577,202 @@ form .col-md-3 {
     position: relative;
     top: -25px;
     left: 70px;
+  }
+  .footer .footer-tex {
+    padding: 20px;
+    font-size: 11px;
+  }
+}
+@media only screen and (min-width: 375px) and (max-width: 425px) {
+  .navbar img {
+    left: 50px;
+  }
+  .section-index {
+    flex-direction: column;
+  }
+  .section-index div h1 {
+    text-align: center;
+    font-size: 20px;
+    top: 60px;
+  }
+  .section-index video {
+    position: relative; /* Permite el desplazamiento relativo del video*/
+    left: 0px; /* Mueve el video 300px hacia la derecha*/
+    top: 100px; /* Mueve el video hacia abajo*/ /* si lo queremos mover hacia arriba usamos el signo menor (-)*/
+    width: auto;
+  }
+  .section-index div p {
+    text-align: center;
+    font-size: 37px;
+  }
+  .section-index div div p {
+    position: relative;
+    top: 85px;
+    font-size: 16px;
+  }
+  .section-aboutUs {
+    display: flex;
+    flex-direction: column;
+  }
+  .section-aboutUs .section-titulos {
+    text-align: center;
+  }
+  .section-aboutUs .section-titulos h1 {
+    top: 100px;
+    font-size: 28px;
+  }
+  .section-aboutUs .section-titulos h2 {
+    top: 90px;
+    font-size: 15px;
+  }
+  .section-aboutUs .section-titulos p {
+    padding: 15px;
+    text-align: justify;
+    top: 100px;
+    font-size: 16px;
+  }
+  .section-aboutUs .img-contenido {
+    position: relative;
+    left: 0px;
+    top: 400px;
+  }
+  .section-aboutUs .img-contenido h6 {
+    font-size: 15px;
+    padding-top: 60px;
+    text-align: center;
+  }
+  .section-aboutUs .img-contenido p {
+    font-size: 12.5px;
+    padding: 10px;
+    text-align: center;
+  }
+  .section-aboutUs .img-contenido i {
+    top: 20px;
+    left: 190px;
+  }
+  .section-aboutUs .img-contenido .iconPerson i {
+    top: 10px;
+  }
+  .section-aboutUs .img-contenido .iconSinLimites i {
+    top: 20px;
+  }
+  .section-aboutUs .imgFondo {
+    justify-content: center;
+  }
+  .section-aboutUs .imgFondo img {
+    left: 2px;
+    width: 250px;
+    top: -950px;
+  }
+  body, html {
+    height: 150%;
+  }
+  .section {
+    width: 100%;
+  }
+  .section .titulo-blog h1 {
+    top: 60px;
+    font-size: 35px;
+  }
+  .section .boton-busqueda {
+    top: 120px;
+    left: 20px;
+    text-align: center;
+  }
+  .section .boton-busqueda input {
+    width: 60%;
+  }
+  .tarjetas-section {
+    position: relative;
+    top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .tarjetas-section .conteiner-blog {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    display: flex;
+    justify-content: space-around; /* Alinea las tarjetas con espacio alrededor */
+    max-width: 1100px;
+  }
+  .tarjetas-section .card {
+    width: 80%; /* Ajusta el ancho según tus necesidades */
+  }
+  .tarjetas-section .card img {
+    width: 100%;
+    height: 180px;
+  }
+  .tarjetas-section .card .contenido {
+    padding: 15px;
+    text-align: center;
+  }
+  .tarjetas-section .card .contenido p {
+    line-height: 1.5;
+    color: #6a6a6a;
+  }
+  .tarjetas-section .card .contenido h3 {
+    font-weight: 400;
+    margin-bottom: 15px;
+  }
+  .body-contact {
+    height: 110%;
+  }
+  .section-contact {
+    color: rgb(255, 255, 255);
+    text-align: center;
+    padding: 0px;
+  }
+  .section-contact div h1 {
+    position: relative;
+    top: 120px;
+    font-size: 30px;
+  }
+  .section-contact div p {
+    padding: 30px;
+    text-align: justify;
+    position: relative;
+    top: 120px;
+    font-size: 16px;
+  }
+  form {
+    position: absolute;
+    left: 80px;
+    top: 700px;
+  }
+  form label {
+    color: rgb(255, 255, 255);
+  }
+  form .form-control {
+    width: 80%;
+    height: 40px;
+  }
+  form .input-group {
+    width: 80%;
+  }
+  form .col-md-3 {
+    position: relative;
+    left: 0px;
+    width: 80%;
+  }
+  .imgContact img {
+    position: relative;
+    text-align: center;
+    top: 150px;
+    left: 50px;
+    width: 300px;
+  }
+  .footer {
+    text-align: center;
+    flex-direction: column;
+    height: 80px;
+  }
+  .footer i {
+    padding: 10px;
+    position: relative;
+    top: -25px;
+    left: 10px;
   }
   .footer .footer-tex {
     padding: 20px;
