terminada pagina teachers y responsive

--- a/scss/responsive/responsive.scss
+++ b/scss/responsive/responsive.scss
@@ -585,8 +585,6 @@
 }
 
 
-
-
 //Vista mobile
 //vista 425px a 500px
 @media only screen and (min-width: 425px) and (max-width:500px){
@@ -1168,6 +1166,8 @@
         
     }
 }
+
+//vista de 600 px a 768px
 @media only screen and (min-width: 600px) and (max-width:768px){
 
     //header
@@ -1748,6 +1748,8 @@
         
     }
 }
+
+
 @media only screen and (min-width: 600px) and (max-width:768px){
 
     //header
