--- a/css/styles.css
+++ b/css/styles.css
@@ -179,13 +179,13 @@ body {
 }
 .section-aboutUs .section-titulos h1 {
   position: relative;
-  top: 80px;
+  top: 100px;
   font-size: 45px;
   color: #b06bff;
 }
 .section-aboutUs .section-titulos h2 {
   position: relative;
-  top: 70px;
+  top: 100px;
   color: #b06bff;
   font-size: 20px;
 }
@@ -383,9 +383,43 @@ form .col-md-3 {
 
 .imgContact img {
   position: relative;
-  top: -50px;
+  top: -1px;
   left: 1200px;
   width: 600px;
+}
+
+.body-profesores {
+  background-color: rgb(26, 29, 55);
+}
+
+.section-profesores {
+  text-align: center;
+  position: relative;
+  top: 100px;
+  color: white;
+}
+.section-profesores h2 {
+  color: #b06bff;
+  font-size: 20px;
+}
+.section-profesores p {
+  font-size: 50px;
+  word-spacing: 0px;
+}
+.section-profesores .img-profesores {
+  position: relative;
+  top: 40px;
+}
+.section-profesores .img-profesores img {
+  width: 200px;
+  height: 200px;
+}
+.section-profesores .contenido-p {
+  position: relative;
+  top: 130px;
+}
+.section-profesores .contenido-p p {
+  font-size: 20px;
 }
 
 @media only screen and (min-width: 320px) and (max-width: 375px) {
